# xcc

./: .gitignore  CMakeLists.txt  README.txt  TODO.txt  build.bat  class-variables.cpp  endian.cpp  explicit.cpp  fake-cmdline.cpp  friend.cpp  functions-as-objects.cpp  functors.cpp  inline.h  input-test.cpp  lambdas.cpp  object-pointer-cmp.cpp  rule-of-zero.cpp  storage-duration.cpp  string_view.cpp  typecasting.cpp  variant.cpp  vtable.cpp
metaprogramming/: primer.cpp  variadic.cpp
src/: crtp.cpp  friend.cpp  inline.h  lambdas.cpp  numeric.cpp  rng.cpp  storage-duration.cpp  string-view.cpp  vtable.cpp
src/concurrency/: lock_free_stack.cc
src/func/: closure.cc  continuation.cc
src/lang/: defer.cc
src/meta/: primer.cc  variadic.cc
src/metaprogramming/: variadic.cpp
src/rt/: endian.cc
src/stl/: algorithm.cc  io.cc  map.cc  numeric.cc  rng.cc
